--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+bidict==0.22.0
 click==8.1.3
 Flask==2.2.2
-importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-Werkzeug==2.2.2
-zipp==3.10.0
-bidict==0.22.0
+numpy==1.23.4
+pandas==1.5.1
+Pillow==9.3.0
+progressbar2==4.2.0
+python-dateutil==2.8.2
+python-utils==3.4.5
+pytz==2022.6
+six==1.16.0
 sxtwl==2.0.6
+Werkzeug==2.2.2
